Update append method of variable length string